# elefast

./: Justfile  LICENSE  README.md  pyproject.toml  zensical.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  examples.yml  spellcheck.yml
benchmarks/: README.md  pyproject.toml
benchmarks/src/benchmarks/: __init__.py  db_startup.py  io_operations.py
docs/: best-practises.md  ci.md  docker.md  getting-started.md  index.md  integrations.md  optimizations.md  optimizations.py  recipes.md  reference.md
examples/async-fastapi/: main.py  pyproject.toml
examples/async-fastapi/src/elefast_example_fastapi_async/: app.py
examples/async-fastapi/tests/: conftest.py  test_app.py
examples/fastapi-async/: README.md  pyproject.toml
examples/fastapi-async/src/elefast_example_fastapi_async/: __init__.py  app.py  database.py  dependencies.py
examples/fastapi-async/tests/: conftest.py  test_app.py  test_database.py  test_dependencies.py  test_fixtures.py
examples/simple-alembic/: README.md  pyproject.toml
examples/simple-alembic/alembic/: env.py
examples/simple-alembic/alembic/versions/: 8c725ffe941b_create_posts_table.py  e6e91bad4eac_create_dummy_post.py
examples/simple-alembic/src/simple_alembic/: db.py  models.py  utils.py
examples/simple-alembic/tests/: conftest.py  test_alembic_integration.py
examples/simple-sync/: README.md  pyproject.toml
examples/simple-sync/tests/: conftest.py  test_database_math.py  test_fixtures.py
examples/uv-monorepo/: README.md
scripts/: generate_optimization_docs.py
src/elefast/: __init__.py  asyncio.py  errors.py  sync.py
src/elefast/cli/: init.py  parser.py  types.py
src/elefast/docker/: configuration.py  integration.py  optimization_docs.py  orchestration.py
src/elefast/extras/: __init__.py  alembic.py
src/elefast/extras/docker/: __init__.py  configuration.py  integration.py  orchestration.py
tests/: conftest.py  test_asyncio.py  test_conftest.py  test_docker_orchestration.py  test_errors.py  test_integration.py  test_optimization_docs.py  test_sync.py
