[project]
name = "elefast"
version = "0.1.0"
description = "Database testing toolkit integrating Postgres, SQLAlchemy, Pytest and Docker"
readme = "README.md"
authors = []
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0.45",
]

[project.optional-dependencies]
docker = [
    "docker>=7.1.0",
    "filelock>=3.20.3",
]

[project.scripts]
elefast = "elefast.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "zensical>=0.0.15",
]

[tool.uv.workspace]
members = [
    "examples/fastapi-async",
]
