[project]
name = "elefast"
version = "0.1.0a5"
description = "Database testing toolkit integrating Postgres, SQLAlchemy, Pytest and Docker"
readme = "README.md"
authors = [{ name = "Niclas van Eyk", email = "hi@niclasve.me" }]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.45",
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education :: Testing",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Documentation",
    "Topic :: Database",
]

[project.optional-dependencies]
docker = [
    "docker>=7.1.0",
    "filelock>=3.20.3",
]
alembic = [
    "alembic>=1.18.4",
]
full = [
    "alembic",
    "docker",
]

[project.scripts]
elefast = "elefast.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "check"},
    { include-group = "docs"},
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
]
check = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
docs = [
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.15",
]

[tool.uv.workspace]
members = [
    "examples/fastapi-async",
    "examples/simple-sync",
    "benchmarks",
    "examples/simple-alembic",
]

[tool.ruff.lint]
extend-select = [
    "FURB",
    "I",
    "RUF",
]
